Edit header menu and site content spacing with WP header menu. Bug when width<600px and WP menu is no longer fixed.

--- a/themes/linc-edge/sass/_content.scss
+++ b/themes/linc-edge/sass/_content.scss
@@ -108,11 +108,11 @@
 
 // GLOBAL margin beneath fixed header
 .site-content {
-
 	margin-top: 48px;
 	background: #fff;
+	border: 2px solid gold;
 	@include desktop {
-		margin-top: 108px;
+		margin-top: 143px;
 		background: $color__background-body;
 	}
 }
